Fix build from source button mobile overflow, fixes #74

--- a/src/components/button-links/ButtonLinks.module.css
+++ b/src/components/button-links/ButtonLinks.module.css
@@ -1,5 +1,5 @@
 ul.buttonLinks {
-  --gap: 20px;
+  --gap: 14px;
   --cols: var(--large-size-columns);
   @media(max-width: 950px) {
     --cols: var(--small-size-columns);
